commiting becasue I'm about to do a risky thing that may ruin my whole project

--- a/index2.html
+++ b/index2.html
@@ -26,11 +26,18 @@
        
         <div class ="time hide" id="time-card">
             <h1 class="time-display" style="text-align:center;"></h1>
+            <button id="retry-btn" class="retry-btn btn hide">Retry</button>
+        </div>
+
+        <div id="highscore-table" class="hide">
+            <h1 id="goodbye-msg">Quiz Complete!</h1>
+            <h1 id="hs-title">Highscores</h1>
+            <p id="scores"></p>
         </div>
 
     </div>
 
     
-<script src="script2.js"></script>   
+    <script src="script2.js"></script>   
 </body>
 </html>
