Fixed local storage
;
'

\'/,.,

gg
git
git ststus

cd ..

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div id="highscore-table" class="hide">
             <h1 id="goodbye-msg">Quiz Complete!</h1>
-            <h1 id="hs-title">Highscores</h1>
+            <h1 id="hs-title">Highscores:</h1>
             <p id="scores"></p>
         </div>
 
